increased cost of remote bridge path

--- a/server.conf
+++ b/server.conf
@@ -302,5 +302,5 @@ verb 3
 mode server
 tls-server
 
-up /etc/openvpn/multi_server/add_to_bridge
+up "/etc/openvpn/multi_server/add_to_bridge 100"
 script-security 2
