--- a/client.conf
+++ b/client.conf
@@ -123,5 +123,5 @@ verb 3
 # Silence repeating messages
 ;mute 20
 
-up /etc/openvpn/multi_server/add_to_bridge
+up "/etc/openvpn/multi_server/add_to_bridge 200"
 script-security 2
